# project-comp-org

./: CMakeLists.txt  README.md  questions and process
Asembler/: asembler  asembler.c  assembler_exe  imemin.txt
Asm/: asemble  asm  asm.c  assembler_prog  dmemin.txt  test_program.asm
Sim/: sim.c  simulator  trace.txt
Simulator/: Simulator  dmemout.txt  hwregtrace.txt  simulator.c  trace.txt
mulmat/: mulmat.asm
test_programs/binom/: binom.asm  dmemin.txt  dmemout.txt  hwregtrace.txt  imemin.txt  regout.txt  trace.txt
test_programs/circle/: circle.asm  cycles.txt  dmemout.txt  imemin.txt  monitor.txt  monitor.yuv  regout.txt
test_programs/disktest/: diskin.txt  diskout.txt  disktest.asm  dmemout.txt  hwregtrace.txt  imemin.txt  regout.txt  trace.txt
test_programs/fib/: fib.asm
test_programs/mulmat/: dmemin.txt  dmemout.txt  imemin.txt  mulmat.asm  regout.txt  trace.txt
