cmake_minimum_required(VERSION 3.29)
project(project_comp_org)

set(CMAKE_CXX_STANDARD 14)

add_executable(project_comp_org
    Asembler/asembler.c
    test_programs/binom/binom.asm
    test_programs/binom/cycles.txt
    test_programs/binom/diskin.txt
    test_programs/binom/diskout.txt
    test_programs/binom/display7seg.txt
    test_programs/binom/dmemin.txt
    test_programs/binom/dmemout.txt
    test_programs/binom/hwregtrace.txt
    test_programs/binom/imemin.txt
    test_programs/binom/irq2in.txt
    test_programs/binom/leds.txt
    test_programs/binom/monitor.txt
    test_programs/binom/monitor.yuv
    test_programs/binom/regout.txt
    test_programs/binom/trace.txt
    test_programs/circle/circle.asm
    test_programs/circle/cycles.txt
    test_programs/circle/diskin.txt
    test_programs/circle/diskout.txt
    test_programs/circle/display7seg.txt
    test_programs/circle/dmemin.txt
    test_programs/circle/dmemout.txt
    test_programs/circle/hwregtrace.txt
    test_programs/circle/imemin.txt
    test_programs/circle/irq2in.txt
    test_programs/circle/leds.txt
    test_programs/circle/monitor.txt
    test_programs/circle/monitor.yuv
    test_programs/circle/regout.txt
    test_programs/circle/trace.txt
    test_programs/disktest/cycles.txt
    test_programs/disktest/diskin.txt
    test_programs/disktest/diskout.txt
    test_programs/disktest/disktest.asm
    test_programs/disktest/display7seg.txt
    test_programs/disktest/dmemin.txt
    test_programs/disktest/dmemout.txt
    test_programs/disktest/hwregtrace.txt
    test_programs/disktest/imemin.txt
    test_programs/disktest/irq2in.txt
    test_programs/disktest/leds.txt
    test_programs/disktest/monitor.txt
    test_programs/disktest/monitor.yuv
    test_programs/disktest/regout.txt
    test_programs/disktest/trace.txt
    test_programs/mulmat/cycles.txt
    test_programs/mulmat/diskin.txt
    test_programs/mulmat/diskout.txt
    test_programs/mulmat/display7seg.txt
    test_programs/mulmat/dmemin.txt
    test_programs/mulmat/dmemout.txt
    test_programs/mulmat/hwregtrace.txt
    test_programs/mulmat/imemin.txt
    test_programs/mulmat/irq2in.txt
    test_programs/mulmat/leds.txt
    test_programs/mulmat/monitor.txt
    test_programs/mulmat/monitor.yuv
    test_programs/mulmat/mulmat.asm
    test_programs/mulmat/regout.txt
    test_programs/mulmat/trace.txt)
